# EnttPong

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  EnttPong.sln  EnttPong.vcxproj  LICENSE  LICENSE.txt  README.md  TODO.txt  appveyor.yml  code analysis.ruleset
EnttPong/: EnttPong.vcxproj  EnttPong.vcxproj.filters  Log.hpp  Random.hpp  TODO.txt  main.cpp
EnttPong/components/: AI.cpp  AI.hpp  All.hpp  Ball.cpp  Ball.hpp  Player.cpp  Player.hpp  Position.cpp  Position.hpp  Sprite.cpp  Sprite.hpp
EnttPong/core/: Game.cpp  Game.hpp  Window.cpp  Window.hpp
EnttPong/events/: KeyDown.hpp  KeyUp.hpp
EnttPong/src/: main.cpp
EnttPong/src/components/: CollisionComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  SpriteComponent.cpp  SpriteComponent.hpp  VelocityComponent.cpp  VelocityComponent.hpp
EnttPong/src/core/: BasicLog.hpp  Game.cpp  Game.hpp
EnttPong/src/graphics/: Window.cpp  Window.hpp
EnttPong/src/libs/SDL2_gfx/: SDL2_gfxPrimitives.h  SDL2_rotozoom.h
EnttPong/src/systems/: AISystem.cpp  AISystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
EnttPong/src/tags/: AITag.cpp  AITag.hpp  BallTag.cpp  BallTag.hpp  PlayerTag.cpp  PlayerTag.hpp
EnttPong/src/utils/: RandomVelocity.hpp
EnttPong/systems/: AISystem.cpp  AISystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
cmake/: CompileDefs.cmake  LinkDefs.cmake  PreprocessorDefs.cmake
libs/SDL2/: LICENSE.txt
